# foldiff

./: .gitignore  CHANGELOG-fldf.md  CHANGELOG-foldiff.md  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  imhex_fldf.hexproj
.github/workflows/: release.yml
foldiff/: Cargo.toml
foldiff/src/: cliutils.rs  main.rs
libfoldiff/: Cargo.toml
libfoldiff/src/: applying.rs  common.rs  diffing.rs  hash.rs  lib.rs  manifest.rs  reporting.rs  threading.rs  upgrade.rs  verify.rs  zstddiff.rs
libfoldiff/test_assets/: cornell-movie-dict
src/: cliutils.rs  foldiff.rs  hash.rs  main.rs  upgrade.rs  utilities.rs  verify.rs  zstddiff.rs
