[package]
name = "foldiff"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = "4.5.17"
countio = "0.2.19"
infer = "0.16.0"
rmp-serde = "1.3.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_bytes = "0.11.15"
twox-hash = "1.6.3"
zstd = { version = "0.13.2", features = ["experimental"] } # create dictionary by reference
