[package]
name = "libfoldiff"
authors = ["Hazel Atkinson"]
version = "1.3.1"
edition = "2021"
license-file = "../LICENSE.md"
description = "A general purpose diffing library for the FDLF format."

[dependencies]
anyhow = "1.0.86"
countio = "0.2.19"
derivative = "2.2.0"
infer = "0.16.0"
rmp-serde = "1.3.0"
serde = { version = "1.0.209", features = ["derive"] }
twox-hash = "1.6.3"
zstd = { version = "0.13.2", features = ["zstdmt"] }
rayon = "1.10.0"
memmap2 = "0.9.4"
reflink = "0.1.3"
camino = "1.1.9"

[dev-dependencies]
tempfile = "3.12.0"
rand = "0.8.5"